@@ -565,6 +565,25 @@ class TestMembersFolder(IntranettTestCase):
         self.assertEqual(folder.portal_type, 'MembersFolder')
         self.assertEqual(folder.Title(), 'Members')
 
+    def test_setuphandler(self):
+        from intranett.policy.setuphandlers import setup_members_folder
+        portal = self.layer['portal']
+        request = self.layer['request']
+        if 'users' in portal:
+            portal._delObject('users')
+        # simulate the effect of commands.py create_site
+        request.form = {
+            'extension_ids': ('intranett.policy:default', ),
+            'form.submitted': True,
+            'title': 'Site title',
+            'language': portal.Language(),
+        }
+        setup_members_folder(portal)
+        folder = portal['users']
+        self.assertEqual(folder.portal_type, 'MembersFolder')
+        self.assertEqual(folder.Title(), 'Ansatte')
+        self.assertEqual(folder.Language(), portal.Language())
+
     def test_get_member(self):
         folder = self._make_one()
         member = folder['test_user_1_']
